fix: allow OPTIONS preflight + wildcard headers + dual-layer CORS to resolve network error